langtools/test/tools/javac/annotations/typeAnnotations/failures/StaticFields.out
StaticFields.java:10:17: compiler.err.illegal.start.of.expr
1 error
